Recipe/Slot extractors, cleanup and plan